--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,8 +47,10 @@
   margin: 0 auto;
 }
 .postItem img {
-  height: 270;
-  width: 360px;
+  height: 270px;
+  width: auto;
+  object-fit: cover;
+
 }
 .title_name{
   color: #ff4935;
@@ -194,6 +196,30 @@ text-align: right;
   align-items: center;
   text-align: center;
 }
+a{
+  color: white;
+}
+.a-custom:hover{
+  color: white;
+}
+
+header {
+  position:fixed;  
+  z-index:2; 
+  width:100%;
+  height:15%;
+  text-align:center;
+  vertical-align:middle;
+  line-height:2em;
+  top: 0%;
+  background-color: whitesmoke;
+}
+.blue-icon {
+  color: rgb(23,119,242);
+}
+.green-icon{
+  color: rgb(68, 230, 108);
+}
 .dark-blue-btn{
   background-color: #1f31ae;
   color: white;
@@ -230,7 +256,7 @@ text-align: right;
 }
 
 .yellowiconcolor{
-  color: #bdbbb2;
+  color: #e7c944;
 }
 .custom-indent {
   padding-left: 2em;
@@ -324,12 +350,12 @@ text-align: center;
 }
 
 .iconWrapper{
-  font-size:1.3em;
+  font-size:1.2em;
   border-radius: 50%;
   color: white;
   line-height: 2em;
-  width: 45px;
-  height: 45px;
+  width: 35px;
+  height: 35px;
   background-color: orange;
   text-align: center;
   display: inline-block;
@@ -371,6 +397,9 @@ text-align: center;
 }
 .p-zero{
   height: 100%;
+}
+body{
+  padding-top: 8%;
 }
 .basic-step{
 
@@ -482,8 +511,13 @@ section:nth-child(odd){
   border: 0;
   font-weight: bold;
 }
+.p-lg-28{
+padding: 28px 0 28px 0;
+}
 
-
+.azure{
+  background-color: azure;
+}
 /* line 87, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_color.scss */
 .theme-color {
   color: #FF3514;
@@ -777,7 +811,7 @@ hr {
   z-index: -1;
   opacity: 0.5;
 }
-
+.p-lg-10{padding-top: 10% ;}
 /* line 174, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_common.scss */
 .section-padding {
   padding-top: 120px;
@@ -3192,6 +3226,9 @@ hr {
   .blackColor{
     background-color: black;
   }
+  .p-lg-28{
+    padding: 28px 0 28px 0;
+    }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
@@ -3521,7 +3558,7 @@ hr {
     background-color: black;
   }
   .container {
-    overflow-x: scroll; /* For horiz. scroll, otherwise overflow-y: scroll; */
+    /* overflow-x: scroll; */ /* For horiz. scroll, otherwise overflow-y: scroll; */
 
     -ms-overflow-style: none;
     overflow: -moz-scrollbars-none;
@@ -8621,8 +8658,8 @@ del {
 
 /* line 321, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_elements.scss */
 .progress-table-wrap {
-  overflow-x: scroll;
-}
+/*   overflow-x: scroll;
+ */}
 
 /* line 325, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_elements.scss */
 .progress-table {
@@ -9565,6 +9602,10 @@ del {
   .section-padding40{
     padding: 0px;
   }
+  body{
+    padding-top: 20%;
+
+  }
 }
 
 @media (max-width: 575px) {
@@ -9616,7 +9657,8 @@ del {
     -msbox-sizing: border-box;
 }
 body{
-   overflow-x: hidden;
+  padding-top: 20%;
+
 }
 img{
    max-width:100%;
@@ -9925,7 +9967,11 @@ px
     text-align: center;
 }
   .p-zero{
-    height: 600px;
+    height: 700px;
+    padding-top: 20%;
+  }
+  section{
+    height: auto;
   }
   .font-lg{
     font-size: larger;
@@ -10019,8 +10065,8 @@ px
   font-weight: bold;
 }
 .container {
-  overflow-x: scroll; /* For horiz. scroll, otherwise overflow-y: scroll; */
-
+/*   overflow-x: scroll; /* For horiz. scroll, otherwise overflow-y: scroll; */
+ 
   -ms-overflow-style: none;
   overflow: -moz-scrollbars-none;
   scrollbar-width: none;
@@ -10037,11 +10083,16 @@ px
 
 
 @media only screen and (min-width: 540px) and (max-width: 720px) {
+  body{
+    padding-top: 20%;
+
+  }
   .p-zero{
     height: 730px;
+    
   }
   .container {
-    overflow-x: scroll; /* For horiz. scroll, otherwise overflow-y: scroll; */
+   /*  overflow-x: scroll; */ /* For horiz. scroll, otherwise overflow-y: scroll; */
 
     -ms-overflow-style: none;
     overflow: -moz-scrollbars-none;
@@ -10100,3 +10151,13 @@ px
   top: 90%;
   transform: translateY(-50%);
 }
+/* Desktops and laptops ----------- */
+@media only screen 
+and (min-width : 1224px) {
+ .p-lg-10{padding-top: 10% ;}
+}
+
+/* Large screens ----------- */
+@media only screen 
+and (min-width : 1824px) {
+  .p-lg-10{padding-top: 10% ;}}
